--- a/Mnemonic-Images-Training/Mnemonic-Images-Training/packages.config
+++ b/Mnemonic-Images-Training/Mnemonic-Images-Training/packages.config
@@ -3,5 +3,7 @@
   <package id="bootstrap" version="3.3.4" targetFramework="net45" />
   <package id="jQuery" version="2.1.4" targetFramework="net45" />
   <package id="jquery.TypeScript.DefinitelyTyped" version="2.2.5" targetFramework="net45" />
+  <package id="mustache.js" version="0.8.1" targetFramework="net45" />
+  <package id="mustache.TypeScript.DefinitelyTyped" version="0.0.8" targetFramework="net45" />
   <package id="react.js" version="0.13.1" targetFramework="net45" />
 </packages>
