--- a/Mnemonic-Images-Training/Mnemonic-Images-Training/Mnemonic-Images-Training.csproj
+++ b/Mnemonic-Images-Training/Mnemonic-Images-Training/Mnemonic-Images-Training.csproj
@@ -66,6 +66,7 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\sticky-footer.css" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Icon.png" />
     <Content Include="Index.html" />
@@ -76,6 +77,7 @@
     <None Include="Scripts\jquery-2.1.4.intellisense.js" />
     <Content Include="Scripts\jquery-2.1.4.js" />
     <Content Include="Scripts\jquery-2.1.4.min.js" />
+    <Content Include="Scripts\mustache.js" />
     <Content Include="Scripts\npm.js" />
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
@@ -90,6 +92,7 @@
     <Content Include="Scripts\react\react-with-addons-0.13.1.min.js" />
     <Content Include="packages.config" />
     <Content Include="Scripts\jquery-2.1.4.min.map" />
+    <Content Include="Scripts\Routing.js" />
     <Content Include="web.config" />
     <None Include="web.Debug.config">
       <DependentUpon>web.config</DependentUpon>
@@ -99,14 +102,30 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <TypeScriptCompile Include="Scripts\TypeScript\About.ts" />
+    <TypeScriptCompile Include="Scripts\TypeScript\Games\Days.ts" />
+    <TypeScriptCompile Include="Scripts\TypeScript\Games\Letters.ts" />
+    <TypeScriptCompile Include="Scripts\TypeScript\Games\Months.ts" />
+    <TypeScriptCompile Include="Scripts\TypeScript\Games\Numbers.ts" />
     <TypeScriptCompile Include="Scripts\TypeScript\mnemonicData.ts" />
     <TypeScriptCompile Include="Scripts\TypeScript\mnemonic.ts" />
+    <TypeScriptCompile Include="Scripts\typings\jquery\jquery.d.ts" />
+    <TypeScriptCompile Include="Scripts\typings\mustache\mustache.d.ts" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Templates\Days\" />
+    <Folder Include="Templates\Letters\" />
+    <Folder Include="Templates\Months\" />
+    <Folder Include="Templates\Numbers\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
   </PropertyGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup Condition="'$(Configuration)' == 'Debug'">
+    <TypeScriptModuleKind>amd</TypeScriptModuleKind>
+  </PropertyGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)\TypeScript\Microsoft.TypeScript.targets" Condition="Exists('$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)\TypeScript\Microsoft.TypeScript.targets')" />
   <Import Project="$(VSToolsPath)\WebApplications\Microsoft.WebApplication.targets" Condition="'$(VSToolsPath)' != ''" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" Condition="false" />
