--- a/Mnemonic-Images-Training/Mnemonic-Images-Training/web.config
+++ b/Mnemonic-Images-Training/Mnemonic-Images-Training/web.config
@@ -5,5 +5,10 @@
       <compilation debug="true" targetFramework="4.5" />
       <httpRuntime targetFramework="4.5" />
     </system.web>
+  <system.webServer>
+    <staticContent>
+      <mimeMap fileExtension=".template" mimeType="text" />
+    </staticContent>
+  </system.webServer>
 
 </configuration>
