--- a/Mnemonic-Images-Training/Mnemonic-Images-Training/Mnemonic-Images-Training.csproj
+++ b/Mnemonic-Images-Training/Mnemonic-Images-Training/Mnemonic-Images-Training.csproj
@@ -95,6 +95,7 @@
     <Content Include="Scripts\Routing.js" />
     <Content Include="web.config" />
     <None Include="Templates\about.template" />
+    <Content Include="Templates\Numbers\startpage.template" />
     <None Include="web.Debug.config">
       <DependentUpon>web.config</DependentUpon>
     </None>
@@ -117,7 +118,6 @@
     <Folder Include="Templates\Days\" />
     <Folder Include="Templates\Letters\" />
     <Folder Include="Templates\Months\" />
-    <Folder Include="Templates\Numbers\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
