--- a/Mnemonic-Images-Training/Mnemonic-Images-Training/Templates/Numbers/startpage.template
+++ b/Mnemonic-Images-Training/Mnemonic-Images-Training/Templates/Numbers/startpage.template
@@ -1,1 +1,31 @@
-﻿
+﻿<h3>Dags att öva på siffror!</h3>
+
+<form class="form-horizontal" role="form">
+    <div class="form-group">
+		<label for="firstNumber" class="col-md-1 control-label">Från</label>
+		<div class="col-md-3">
+			<input type="text" class="form-control" id="firstNumber" placeholder="Första numret"> 
+		</div>
+		<label for="lastNumber" class="col-md-1 control-label">Till</label>
+		<div class="col-md-3">
+			<input type="text" class="form-control" id="lastNumber" placeholder="Andra numret"> 
+		</div>
+		<div class="clearfix"></div>
+		<label for="countdown" class="col-md-1 control-label">Tid</label>
+		<div class="col-md-3">
+			<input type="text" class="form-control" id="countdown" placeholder="Tid per figurkod"> 
+		</div>
+		<label for="mode" class="clearme col-md-1 control-label">Läge</label>
+        <div class="col-md-3">
+          <select id="mode" class="form-control">
+		  		<option id="Learning" value="0">Inlärning</option>
+                <option id="Training" value="1">Träning</option>
+              </select>
+        </div>
+		<div class="clearfix"></div>
+		<div class="text-center">
+			<button id="Start" type="submit" class="btn btn-success col-md-2">Kör »</button>
+		</div>
+    </div>
+</form>
+<div id="playground"></div>
