--- a/Mnemonic-Images-Training/Mnemonic-Images-Training/Mnemonic-Images-Training.csproj
+++ b/Mnemonic-Images-Training/Mnemonic-Images-Training/Mnemonic-Images-Training.csproj
@@ -21,6 +21,7 @@
     <IISExpressWindowsAuthentication />
     <IISExpressUseClassicPipelineMode />
     <TypeScriptToolsVersion>1.5</TypeScriptToolsVersion>
+    <UseGlobalApplicationHostFile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -74,6 +75,8 @@
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\mnemonic-data_old.js" />
     <Content Include="Scripts\mnemonic_old.js" />
+    <None Include="Properties\PublishProfiles\figurkoder - FTP.pubxml" />
+    <None Include="Properties\PublishProfiles\figurkoder - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-2.1.4.intellisense.js" />
     <Content Include="Scripts\jquery-2.1.4.js" />
     <Content Include="Scripts\jquery-2.1.4.min.js" />
@@ -113,7 +116,6 @@
     <TypeScriptCompile Include="Scripts\TypeScript\Games\Letters.ts" />
     <TypeScriptCompile Include="Scripts\TypeScript\Games\Months.ts" />
     <TypeScriptCompile Include="Scripts\TypeScript\Games\Numbers.ts" />
-    <TypeScriptCompile Include="Scripts\TypeScript\mnemonicData - Copy.ts" />
     <TypeScriptCompile Include="Scripts\TypeScript\mnemonicData.ts" />
     <TypeScriptCompile Include="Scripts\TypeScript\mnemonic.ts" />
     <TypeScriptCompile Include="Scripts\typings\jquery\jquery.d.ts" />
