--- a/Mnemonic-Images-Training/Mnemonic-Images-Training/Templates/Numbers/practice.template
+++ b/Mnemonic-Images-Training/Mnemonic-Images-Training/Templates/Numbers/practice.template
@@ -4,6 +4,6 @@
         <span class="col-md-1"> </span>
         <span id="MnemomicImage" class="label label-primary col-md-3">{{ MnemomicImage }}</span>
         <span class="col-md-1"> </span>
-        <span id="Timer" class="label label-primary col-md-3">00:10</span>
+        <span id="Timer" class="label label-primary col-md-3">{{ Timer }}</span>
     </h2>
 </div>
