--- a/Mnemonic-Images-Training/Mnemonic-Images-Training/Templates/Numbers/startpage.template
+++ b/Mnemonic-Images-Training/Mnemonic-Images-Training/Templates/Numbers/startpage.template
@@ -4,16 +4,16 @@
     <div class="form-group">
 		<label for="firstNumber" class="col-md-1 control-label">Från</label>
 		<div class="col-md-3">
-			<input type="text" class="form-control" id="firstNumber" placeholder="Första numret"> 
+			<input type="text" class="form-control" id="firstNumber" placeholder="Första numret" /> 
 		</div>
 		<label for="lastNumber" class="col-md-1 control-label">Till</label>
 		<div class="col-md-3">
-			<input type="text" class="form-control" id="lastNumber" placeholder="Andra numret"> 
+			<input type="text" class="form-control" id="lastNumber" placeholder="Andra numret" /> 
 		</div>
 		<div class="clearfix"></div>
 		<label for="countdown" class="col-md-1 control-label">Tid</label>
 		<div class="col-md-3">
-			<input type="text" class="form-control" id="countdown" placeholder="Tid per figurkod"> 
+			<input type="text" class="form-control" id="countdown" placeholder="Tid per figurkod" /> 
 		</div>
 		<label for="mode" class="clearme col-md-1 control-label">Läge</label>
         <div class="col-md-3">
@@ -24,7 +24,7 @@
         </div>
 		<div class="clearfix"></div>
 		<div class="text-center">
-			<button id="Start" type="submit" class="btn btn-success col-md-2">Kör »</button>
+			<button id="Start" type="submit" class="btn btn-success col-md-2 col-sm-6 col-xs-12">Kör »</button>
 		</div>
     </div>
 </form>
