--- a/Mnemonic-Images-Training/Mnemonic-Images-Training/Templates/Numbers/startpage.template
+++ b/Mnemonic-Images-Training/Mnemonic-Images-Training/Templates/Numbers/startpage.template
@@ -8,12 +8,12 @@
 		</div>
 		<label for="lastNumber" class="col-md-1 control-label">Till</label>
 		<div class="col-md-3">
-			<input type="text" class="form-control" id="lastNumber" placeholder="Andra numret" /> 
+			<input type="text" class="form-control" id="lastNumber" placeholder="Sista numret" /> 
 		</div>
 		<div class="clearfix"></div>
 		<label for="countdown" class="col-md-1 control-label">Tid</label>
 		<div class="col-md-3">
-			<input type="text" class="form-control" id="countdown" placeholder="Tid per figurkod" /> 
+			<input type="text" class="form-control" id="countdown" placeholder="Sekunder per figurkod" /> 
 		</div>
 		<label for="mode" class="clearme col-md-1 control-label">Läge</label>
         <div class="col-md-3">
