--- a/Mnemonic-Images-Training/Mnemonic-Images-Training/Templates/Numbers/startpage.template
+++ b/Mnemonic-Images-Training/Mnemonic-Images-Training/Templates/Numbers/startpage.template
@@ -2,30 +2,33 @@
 
 <form class="form-horizontal" role="form">
     <div class="form-group">
-		<label for="firstNumber" class="col-md-1 control-label">Från</label>
-		<div class="col-md-3">
-			<input type="text" class="form-control" id="firstNumber" placeholder="Första numret" /> 
-		</div>
-		<label for="lastNumber" class="col-md-1 control-label">Till</label>
-		<div class="col-md-3">
-			<input type="text" class="form-control" id="lastNumber" placeholder="Sista numret" /> 
-		</div>
-		<div class="clearfix"></div>
-		<label for="countdown" class="col-md-1 control-label">Tid</label>
-		<div class="col-md-3">
-			<input type="text" class="form-control" id="countdown" placeholder="Sek per figurkod" /> 
-		</div>
-		<label for="mode" class="clearme col-md-1 control-label">Läge</label>
-        <div class="col-md-3">
-          <select id="mode" class="form-control">
-		  		<option id="Learning" value="0">Inlärning</option>
-                <option id="Training" value="1">Träning</option>
-              </select>
-        </div>
-		<div class="clearfix"></div>
-		<div class="text-center">
-			<button id="Start" type="submit" class="btn btn-success col-md-2 col-sm-6 col-xs-12">Kör »</button>
-		</div>
+		  <label for="firstNumber" class="col-md-1 control-label">Från</label>
+		  <div class="col-md-3">
+			  <input type="text" class="form-control" id="firstNumber" placeholder="Första numret" /> 
+		  </div>
+		  <label for="lastNumber" class="col-md-1 control-label">Till</label>
+		  <div class="col-md-3">
+			  <input type="text" class="form-control" id="lastNumber" placeholder="Sista numret" /> 
+		  </div>
+		  <div class="clearfix"></div>
+		  <label for="countdown" class="col-md-1 control-label">Tid</label>
+		  <div class="col-md-3">
+			  <input type="text" class="form-control" id="countdown" placeholder="Sek per figurkod" /> 
+		  </div>
+		  <label for="mode" class="clearme col-md-1 control-label">Läge</label>
+          <div class="col-md-3">
+            <select id="mode" class="form-control">
+		  		    <option id="Learning" value="0">Inlärning</option>
+              <option id="Training" value="1">Träning</option>
+            </select>
+          </div>
+		  <div class="clearfix"></div>
+      <div>
+        <button id="Start" type="submit" class="btn btn-success col-md-2 col-sm-4 col-xs-4">Start »</button>
+        <button id="Pause" type="submit" class="btn btn-warning col-md-2 col-sm-4 col-xs-4">Paus »</button>
+        <button id="Stop" type="submit" class="btn btn-danger col-md-2 col-sm-4 col-xs-4">Stopp »</button>
+      </div>
+		  <div class="clearfix"></div>
     </div>
 </form>
 <div id="playground"></div>
