--- a/Mnemonic-Images-Training/Mnemonic-Images-Training/Templates/Numbers/practice.template
+++ b/Mnemonic-Images-Training/Mnemonic-Images-Training/Templates/Numbers/practice.template
@@ -4,6 +4,6 @@
         <span id="MnemomicImage" class="label label-primary col-md-4 col-sm-6 col-xs-12">{{ MnemomicImage }}</span>
         <button id="MnemomicImageButton" class="label label-primary col-md-4 col-sm-6 col-xs-12 hide">{{ MnemomicImage }}</button>
         <span id="Timer" class="label label-primary col-md-4 col-sm-6 col-xs-12">{{ Timer }}</span>
-        <button id="Next" class="label label-primary col-md-12 col-sm-6 col-xs-12">Nästa »</button>
+        <button id="Next" class="label label-info col-md-12 col-sm-6 col-xs-12">Nästa »</button>
     </h2>
 </div>
