--- a/Mnemonic-Images-Training/Mnemonic-Images-Training/Mnemonic-Images-Training.csproj
+++ b/Mnemonic-Images-Training/Mnemonic-Images-Training/Mnemonic-Images-Training.csproj
@@ -112,6 +112,7 @@
     <Content Include="Templates\Months\startpage.template" />
     <Content Include="Templates\Names\practice.template" />
     <Content Include="Templates\Names\startpage.template" />
+    <Content Include="Templates\Numbers\practiceThreeChar.template" />
     <None Include="web.Debug.config">
       <DependentUpon>web.config</DependentUpon>
     </None>
