--- a/Mnemonic-Images-Training/Mnemonic-Images-Training/Templates/Days/practice.template
+++ b/Mnemonic-Images-Training/Mnemonic-Images-Training/Templates/Days/practice.template
@@ -3,7 +3,7 @@
         <span id="Day" class="label label-primary col-md-6 col-sm-6 col-xs-12">{{ Day }}</span>
         <span id="MnemomicImage" class="label label-primary col-md-6 col-sm-6 col-xs-12">{{ MnemomicImage }}</span>
         <button id="MnemomicImageButton" class="label label-primary col-md-6 col-sm-6 col-xs-12 hide">{{ MnemomicImage }}</button>
-        <span id="Timer" class="label label-primary col-md-6 col-sm-6 col-xs-12">{{ Timer }}</span>
+        <span id="Timer" class="label label-default col-md-6 col-sm-6 col-xs-12">{{ Timer }}</span>
         <button id="Next" class="label label-info col-md-6 col-sm-6 col-xs-12">Nästa »</button>
     </h2>
 </div>
