--- a/Mnemonic-Images-Training/Mnemonic-Images-Training/Templates/Numbers/practiceThreeChar.template
+++ b/Mnemonic-Images-Training/Mnemonic-Images-Training/Templates/Numbers/practiceThreeChar.template
@@ -1,7 +1,7 @@
 ﻿<div class="text-center">
     <h2>
       <span id="Number" class="label label-primary col-md-5 col-sm-5 col-xs-12">{{ Number }}</span>
-      <span id="Timer" class="label label-primary col-md-2 col-sm-2 col-xs-12">{{ Timer }}</span>
+      <span id="Timer" class="label label-default col-md-2 col-sm-2 col-xs-12">{{ Timer }}</span>
       <button id="Next" class="label label-info col-md-5 col-sm-5 col-xs-12">Nästa »</button>
       <span id="MnemomicImage" class="label label-primary col-md-12 col-sm-12 col-xs-12">{{ MnemomicImage }}</span>
       <button id="MnemomicImageButton" class="label label-primary col-md-12 col-sm-12 col-xs-12 hide">{{ MnemomicImage }}</button>
