--- a/Mnemonic-Images-Training/Mnemonic-Images-Training/Templates/Shared/practice.template
+++ b/Mnemonic-Images-Training/Mnemonic-Images-Training/Templates/Shared/practice.template
@@ -1,9 +1,9 @@
 ﻿<div class="text-center">
     <h2>
-      <span id="Name" class="label label-primary col-md-5 col-sm-5 col-xs-12">{{ Name }}</span>
-      <span id="Timer" class="label label-default col-md-2 col-sm-2 col-xs-12">{{ Timer }}</span>
-      <button id="Next" class="label label-info col-md-5 col-sm-5 col-xs-12">Nästa »</button>
+      <span id="Item" class="label label-primary col-md-12 col-sm-12 col-xs-12">{{ Item }}</span>
       <span id="MnemomicImage" class="label label-primary col-md-12 col-sm-12 col-xs-12">{{ MnemomicImage }}</span>
       <button id="MnemomicImageButton" class="label label-primary col-md-12 col-sm-12 col-xs-12 hide">{{ MnemomicImage }}</button>
+      <span id="Timer" class="label label-default col-md-6 col-sm-6 col-xs-12">{{ Timer }}</span>
+      <button id="Next" class="label label-success col-md-6 col-sm-6 col-xs-12">Nästa »</button>
     </h2>
 </div>
