Added Application Insight Script

--- a/Mnemonic-Images-Training/Mnemonic-Images-Training/Mnemonic-Images-Training.csproj
+++ b/Mnemonic-Images-Training/Mnemonic-Images-Training/Mnemonic-Images-Training.csproj
@@ -72,6 +72,7 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Icon.png" />
     <Content Include="Index.html" />
+    <Content Include="Scripts\ApplicationInsight.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\mnemonic-data_old.js" />
